# tauri-app

./: .gitignore  .releaserc  README.md  RELEASES.md  TESTING.md  TESTING_MEROD.md  UI_NAVIGATION.md  bounties.json  merod-config.json  package.json  pnpm-lock.yaml  uninstall-mac.sh
.github/workflows/: build-linux.yml  build-macos-dmg.yml  build-macos.yml  build-windows.yml  deploy-download-site.yml  release.yml
apps/desktop/: MODERN_UX_IMPROVEMENTS.md  UX_IMPLEMENTATION_PLAN.md  UX_PRIORITY_RECOMMENDATIONS.md  index.html  package.json  vite.config.ts
apps/desktop/scripts/: svg-to-icon.js
apps/desktop/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/scripts/: download-merod.sh
apps/desktop/src-tauri/src/: main.rs  proxy_script.js
apps/desktop/src/components/: ContextMenu.css  ContextMenu.tsx  DataTable.css  DataTable.tsx  ErrorBoundary.css  ErrorBoundary.tsx  LogsViewer.css  LogsViewer.tsx  NodeStatusIndicator.css  NodeStatusIndicator.tsx  ScrollHint.css  ScrollHint.tsx  Sidebar.css  Sidebar.tsx  Skeleton.css  Skeleton.tsx  TabView.css  TabView.tsx  ToastContainer.css  ToastContainer.tsx  UpdateNotification.css  UpdateNotification.tsx
apps/desktop/src/contexts/: ThemeContext.tsx  ToastContext.tsx
apps/desktop/src/pages/: ConfirmAction.css  ConfirmAction.tsx  Contexts.css  Contexts.tsx  InstalledApps.css  InstalledApps.tsx  Marketplace.css  Marketplace.tsx  NodeManagement.css  NodeManagement.tsx  Nodes.css  Nodes.tsx  Onboarding.css  Onboarding.tsx  Settings.css  Settings.tsx
apps/desktop/src/utils/: appUtils.ts  marketplaceCache.ts  merod.ts  onboarding.ts  onboardingProgress.ts  registry.ts  settings.ts  updater.ts
apps/download-site/: index.html  package.json  vite.config.ts
apps/download-site/src/: App.css  App.tsx  index.css  main.tsx
apps/download-site/src/release/: fetchRelease.ts  index.ts  platform.ts  types.ts
docs/: CURSOR_CONTRIBUTING.md
scripts/release/: collect-assets.js  generate-latest-json.js  generate-release-json.js  validate-release.cjs  validate-release.js
