[package]
name = "calimero-tauri-app"
version = "0.1.0"
description = "Calimero Tauri Desktop App"
authors = ["Calimero"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "updater", "process-relaunch", "shell-open", "http-request"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

