[package]
name = "calimero-tauri-app"
version = "0.1.0"
description = "Calimero Tauri Desktop App"
authors = ["Calimero"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "updater", "process-relaunch", "shell-open", "http-all", "window-all", "devtools", "dialog-all", "icon-png"] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["time", "process", "fs", "io-util"] }
reqwest = { version = "0.11", features = ["json"] }
url = "2.5"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
toml = "0.8"
regex = "1.10"
thiserror = "1.0"

[features]
default = ["custom-protocol", "autostart"]
custom-protocol = ["tauri/custom-protocol"]
autostart = ["dep:tauri-plugin-autostart"]

